--- a/src/styles/weather/_app.scss
+++ b/src/styles/weather/_app.scss
@@ -8,7 +8,7 @@
   &__header {
     display: flex;
     justify-content: flex-end;
-    padding: 24px;
+    padding: 50px 24px 24px;
   }
 
   &__btn-menu {
