--- a/src/styles/weather/_app.scss
+++ b/src/styles/weather/_app.scss
@@ -8,7 +8,8 @@
   &__header {
     display: flex;
     justify-content: flex-end;
-    padding: 24px;
+    padding: 13px 20px;
+    margin-right: 55px;
   }
 
   &__btn-menu {
